# opengl-playground

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
assets/default/shaders/: axes.frag  axes.vert  blinn_phong.frag
assets/models/gravel_torus/: gravel_torus.glb  gravel_torus_without_tangents.glb
assets/models/shadow_test_scene/: shadow_test_scene.glb
assets/shaders/coordinate_sytems_app/: shader.frag  shader.vert
assets/shaders/default/: blinn_phong.frag  blinn_phong.vert  shader.frag  shader.vert
assets/shaders/shader_intro/: basic.frag  basic.vert
assets/shaders/textures_app/: shader.frag  shader.vert
dependencies/cgltf/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt  README
dependencies/glad/src/: glad.c
example/src/: main.cpp
glad/include/glad/: glad.h
include/: ron.h
mikktspace/: CMakeLists.txt
shaders/shader_intro/: basic.frag
src/: assets.cpp  assets.h  camera_viewport_controls.cpp  camera_viewport_controls.h  gltf.cpp  gltf.h  i_camera.h  i_spatial.h  lights.h  log.cpp  log.h  main.cpp  material.h  mesh_node.cpp  meshes.h  opengl_axes_renderer.cpp  opengl_directional_light.cpp  opengl_geometry.cpp  opengl_grid_renderer.cpp  opengl_renderer.cpp  opengl_rendering.h  opengl_shader_program.cpp  opengl_texture.cpp  perspective_camera.cpp  perspective_camera.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  tangent_generation.cpp  texture.cpp  texture.h  uniforms.cpp  uniforms.h
src/example/: main.cpp
src/glpg/: assets.cpp  assets.h  axes_drawer.cpp  axes_drawer.h  camera_orbit_controls.cpp  camera_orbit_controls.h  camera_viewport_controls.cpp  camera_viewport_controls.h  gltf.cpp  gltf.h  gltf_importer.cpp  gltf_importer.h  i_camera.h  i_drawable.h  i_spatial.h  log.cpp  log.h  material.cpp  material.h  mesh_node.cpp  meshes.h  opengl_axes_drawer.cpp  opengl_axes_renderer.cpp  opengl_geometry.cpp  opengl_gpu_data.cpp  opengl_renderer.cpp  opengl_rendering.h  opengl_shader_program.cpp  opengl_texture.cpp  opengl_uniforms.cpp  perspective_camera.cpp  perspective_camera.h  renderer.cpp  renderer.h  sample.cpp  sample.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  (+5 more)
src/glpg/coordinate_sytems_app/: coordinate_sytems_app.cpp  coordinate_sytems_app.h
src/glpg/examples/demo/: demo.cpp  demo.h
src/glpg/hello_triangle/: hello_triangle.cpp  hello_triangle.h
src/glpg/meshes/: geometry.cpp  geometry.h  geometry_data.h  mesh.cpp  mesh.h  mesh_node.cpp  mesh_section.cpp  mesh_section.h  render_geometry.cpp
src/glpg/shader_intro/: shader_intro.cpp  shader_intro.h
src/glpg/template_app/: template_app.cpp  template_app.h
src/glpg/textures_app/: textures_app.cpp  textures_app.h
stb_image/: CMakeLists.txt
